# MultiChannel-Bone-SE

./: .gitattributes  .gitignore  README.md  main.py  mlflow_server.sh  pyproject.toml  run_test.sh  setup_supercomputer.sh
.claude/: settings.json  settings.local.json
configs/: baseline.yaml  beamformer_mamba_se.yaml  ic_conv_tasnet.yaml  ic_conv_tasnet_bcm_off.yaml  ic_mamba.yaml  ic_mamba2_bcm_guide.yaml  ic_mamba2_bcm_guide_v2.yaml  ic_mamba2_ft.yaml  ic_mamba_bcm_off.yaml  labnet.yaml  labnet_metricgan.yaml  spatialnet split.yaml  spatialnet.yaml  spatialnet_fsq_split.yaml
docs/: 01_QuickStart.md  02_Database_Management.md  03_Data_Synthesis.md  04_Training_and_Inference.md  05_MLflow_Guide.md  06_Model_Architecture.md  07_RIR_Simulation.md  08_Git_Sync_Guide.md  09_Audio_Tool_Guide.md  10_Unit_Tests.md  11_Beamforming.md  Audio_Tool_Guide.md  Base_Model_Architecture_Guide.md  Data_Pipeline_Deep_Dive.md  Data_Synthesis_Guide.md  Database_Management_Guide.md  Execution_Configuration_Guide.md  Git_Sync_Guide.md  MLFlow_Logging_Guide.md  MLflow_Guide.md  RIR_Simulation_Guide.md
docs/CLAUDE/: CLAUDE_configs.md  CLAUDE_data.md  CLAUDE_root.md  CLAUDE_scripts.md  CLAUDE_src.md  CLAUDE_src_callbacks.md  CLAUDE_src_data.md  CLAUDE_src_db.md  CLAUDE_src_models.md  CLAUDE_src_modules.md  CLAUDE_src_simulation.md  CLAUDE_src_utils.md  CLAUDE_test_model.md
scripts/: audio_tool.py  cleanup_db.py  compare_checkpoints.py  final_indexing_v2.py  find_max_batch.py  generate_rir_bank.py  generate_samples.py  manage_db.py  verify_gpu_synthesis.py  verify_ic_conv_tasnet.py  verify_pipeline.py  verify_pipeline_improvements.py  visualize_beampattern.py  visualize_rirs.py
src/data/: dataset.py  (+3 more)
tests/: conftest.py  test_audio_io.py  test_beamformer_smoke.py  test_labnet_debug.py  test_labnet_io_parity.py  test_losses.py  test_metrics.py  test_mlflow.py  test_models.py  test_phase_debug.py  test_synthesis.py
(+56 files in other folders)
