[project]
name = "speech-enhancement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonargparse[signatures]>=4.27.7",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "numpy>=2.2.6",
    "psutil>=7.2.2",
    "nvidia-ml-py>=13.590.48",
    "pyroomacoustics>=0.9.0",
    "python-dotenv>=1.2.1",
    "soundfile>=0.13.1",
    "sqlmodel>=0.0.31",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
    "librosa>=0.11.0",
    "requests>=2.32.5",
    "onnxruntime<1.24",
    "torchmetrics[audio]>=1.8.2",
    "mamba-ssm>=2.3.0",
    "causal-conv1d>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
